[package]
name = "firmion-regiondb"
description = "Region database used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "regiondb.rs"

[dependencies]
anyhow = "1.0.34"

# local dependencies
diags = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
