[package]
name = "roust"
version = "0.1.0"
authors = ["Steve King <sk@metrokings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.3.1"
clap = { version = "2.33.0" }
fern = "0.6.0"
log = "0.4.11"
anyhow = "1.0.34"
ast = { path = "../ast" }
diags = { path = "../diags" }

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
