[package]
name = "firmion-symtable"
description = "Symbol table used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "symtable.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }

[lints]
workspace = true
